Fixed popup story on iphone 5

--- a/campaign/less/style.less
+++ b/campaign/less/style.less
@@ -108,6 +108,11 @@ div#loadingEl {
 		.translate(0, 0);
 		// will-change: transform;
 	}
+	@media(max-width:768px) {  
+		#campaign-header {
+			.translate(0px, 0px) !important;
+		}
+	}
 }
 
 .makeStatic {
